[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/ui/pause/UI_4.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/pause/UI_3.png" type="Texture" id=2]
[ext_resource path="res://scripts/pause.gd" type="Script" id=3]
[ext_resource path="res://scenes/hoverEffect.tscn" type="PackedScene" id=4]


[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 59, 42, 9, 7 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 60, 58, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 60, 76, 8, 7 )

[node name="pause" type="TextureRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 4
script = ExtResource( 3 )

[node name="resume" type="TextureButton" parent="."]
margin_left = 139.0
margin_top = 65.0
margin_right = 181.0
margin_bottom = 78.0
texture_normal = SubResource( 1 )
expand = true
stretch_mode = 3

[node name="hover" parent="resume" instance=ExtResource( 4 )]

[node name="settings" type="TextureButton" parent="."]
margin_left = 139.0
margin_top = 82.0
margin_right = 181.0
margin_bottom = 95.0
texture_normal = SubResource( 2 )
expand = true
stretch_mode = 3

[node name="hover" parent="settings" instance=ExtResource( 4 )]

[node name="home" type="TextureButton" parent="."]
margin_left = 139.0
margin_top = 99.0
margin_right = 181.0
margin_bottom = 112.0
texture_normal = SubResource( 3 )
expand = true
stretch_mode = 3

[node name="hover" parent="home" instance=ExtResource( 4 )]

[connection signal="pressed" from="resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="home" to="." method="_on_home_pressed"]
